# ParametricCAD

./: .gitignore  CMakeLists.txt  Defines.h  Document.cpp  MainWindow.cpp  MainWindow.h  README.md  Util.cpp  Util.h  Utility.cmake  YesNo.h  document.h  main.cpp  values.cpp  values.h
Command/: abstract_cmd.cpp  abstract_cmd.h  change_visibility_cmd.cpp  change_visibility_cmd.h  edit_box_cmd.cpp  edit_box_cmd.h  edit_parameter_cmd.cpp  edit_parameter_cmd.h  make_box_cmd.cpp  make_box_cmd.h  make_parameter_cmd.cpp  make_parameter_cmd.h  set_parameter_cmd.cpp  set_parameter_cmd.h
Dialog/: box_dlg.cpp  box_dlg.h  box_dlg.ui  parameter_dlg.cpp  parameter_dlg.h  parameter_dlg.ui  shape_dlg.cpp  shape_dlg.h
FromSample/: BRepNaming_Box.cxx  BRepNaming_Box.hxx  BRepNaming_Loader.hxx  BRepNaming_LoaderParent.cxx  BRepNaming_LoaderParent.hxx  BRepNaming_TopNaming.cxx  BRepNaming_TopNaming.hxx  BRepNaming_TopNaming.lxx  BRepNaming_TypeOfPrimitive3D.hxx  OCAFSample_AISDriver.cxx  OCAFSample_AISDriver.hxx  OCAFSample_BoxDriver.cxx  OCAFSample_BoxDriver.hxx  OCAFSample_Driver.cxx  OCAFSample_Driver.hxx  OCAFSample_IBox.cxx  OCAFSample_IBox.hxx  OCAFSample_IDisplayer.cxx  OCAFSample_IDisplayer.hxx  OCAFSample_IObject.cxx  OCAFSample_IObject.hxx  OCAFSample_ISelection.cxx  OCAFSample_ISelection.hxx  OCAFSample_IShape.cxx  OCAFSample_IShape.hxx  OCAFSample_ITransformParent.cxx  OCAFSample_ITransformParent.hxx  OCAFSample_ObjectType.hxx  OCAFSample_SolverEx.cxx  OCAFSample_SolverEx.hxx  Tags.h
Graphics/: ViewerDraggableObject.cpp  ViewerDraggableObject.h  ViewerInteractor.cpp  ViewerInteractor.h  ViewerWidget.cpp  ViewerWidget.h
PythonConsole/: BitmapFactory.cpp  BitmapFactory.h  CMakeLists.txt  CallTips.cpp  CallTips.h  CompletionList.cpp  CompletionList.h  IncludePybind11.h  PyStdoutRedirector.h  PythonConsole.cpp  PythonConsole.h  PythonConsoleHistory.cpp  PythonConsoleHistory.h  PythonConsole_global.h  PythonSyntaxHighlighter.cpp  PythonSyntaxHighlighter.h  TextEdit.cpp  TextEdit.h  defines.h  pyutil.cpp  pyutil.h
PythonConsole/Icons/: resource.qrc
Tree/: treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  treeview.cpp  treeview.h
mymod/: CMakeLists.txt  CadFileReader.cpp  CadFileReader.h  main.cpp
